# liblogger

./: CMakeLists.txt  NOTICE.txt  README.md  README.txt  ReleaseNotes.txt
docs/: Doxyfile  doc.h  gendoc.sh
docs/docs/: footer.html  tree.html
inc/liblogger/: file_logger.h  liblogger.h  liblogger_config.h  liblogger_levels.h  logger_object.h  socket_logger.h
logserver/: log_server.py
src/: CMakeLists.txt  LLTimeUtil.c  LLTimeUtil.h  file_logger.c  file_logger_impl.h  liblogger.c  socket_logger.c  socket_logger_impl.h
src/inc/: config.h.cmake
src/inc/liblogger/: file_logger.h  liblogger.h  liblogger_config.h  liblogger_levels.h  logger_object.h  socket_logger.h
src/platform_layer/posix/: tPLSocket.c
src/platform_layer/win32/: tPLMutex.c  tPLSocket.c
src/src/: CMakeLists.txt  LLTimeUtil.c  file_logger_impl.h  socket_logger.c  win32_support.h
src/src/platform_layer/inc/: tPLMutex.h  tPLSocket.h
src/src/platform_layer/posix/: tPLMutex.c
src/src/platform_layer/win32/: tPLSocket.c
src/testapp/: CMakeLists.txt  src_nofilename.cpp
testapp/: logtest.h  main.cpp  src_debug.cpp  src_fatal.cpp  src_min.cpp  src_nofilename.cpp  src_nologs.cpp  src_warn.cpp
testapp/file_logger_tests/: append_test.cpp
